# Automatic-technology-autosystem-mapping-in-neo4j

./: README.md
auto_add_nodes/: README.md  pyproject.toml
auto_add_nodes/src/auto_add_nodes/: agents.py  config.py  crew.py  main.py  tasks.py
auto_add_nodes/src/auto_add_nodes/config/: agents.yaml  tasks.yaml
auto_add_nodes/src/auto_add_nodes/tools/: google_search.py  graph_qa.py
