[tool.poetry]
name = "auto_add_nodes"
version = "0.1.0"
description = "auto-add-nodes using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }

[tool.poetry.scripts]
auto_add_nodes = "auto_add_nodes.main:run"
train = "auto_add_nodes.main:train"
replay = "auto_add_nodes.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
